kubeadm/challenge/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-database
  labels:
    name: prod-database
